# purepython_packaging

./: .gitignore  README.md  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
slides/: configuration.md  pyproject.md
tests/: test_main.py
