[build-system]
requires = [
    "setuptools", 
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
version = "0.1.0"
description = "A simple hello world package"
authors = [{ name = "pellem_m", email = "pellem_m@gmail.com" }]
requires-python = ">=3.8"

[project.scripts]
hello-world = "hello_world.main:main"
